--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.port = 8082
-server.servlet.contextPath=/pokeapi
-server.servlet.path=/pokeapi
+#server.servlet.contextPath=/pokeapi
+#server.servlet.path=/pokeapi
